<resources>
    <string name="app_name">Hooke Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hooke App</string>
    <string name="nav_header_subtitle">All About Hooke\'s Law</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">What is Hooke\'s Law?</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hooke_illustration">Hooke Illustration</string>
    <string name="hooke_description">Sesuai dengan namanya, Hukum Hooke digagas oleh Robert Hooke yang menyelidiki hubungan antar gaya yang bekerja pada sebuah benda elastis, pegas , atau lainnya agar benda tersebut bisa kembali ke bentuk awal atau tidak melebihi batas elastisitasnya. Dengan ini kita dapat kesimpulan bahwa Hukum Hooke membahas jumlah gaya maksimum yang bisa diberikan pada sebuah benda yang bersifat elastis (umumnya pegas) supaya tidak melewati batas elastisnya dan membuang sifat elastis benda tersebut.</string>
    <string name="hooke_title">Hooke\'s Law</string>
    <string name="stress_formula">Stress Formula</string>
    <string name="stress_description">Tegangan adalah suatu keadaan dimana sebuah benda mengalami pertambahan panjang ketika sebuah benda diberi gaya pada salah satu ujungnya sedangkan ujung lainnya ditahan. Contohnya. seutas kawat dengan luas penampang x m2, dengan panjang mula-mula x meter ditarik  dengan gaya sebesar N pada salah satu ujungnya sedangkan pada ujung yang lain ditahan maka kawat akan mengalami pertambahan panjang sebesar x meter.</string>
    <string name="gaya_n">Gaya (N)</string>
    <string name="luas_m2">Luas (m2)</string>
    <string name="calculate">Calculate</string>
    <string name="strain_formula">Strain Formula</string>
    <string name="strain_description">Regangan adalah suatu perbandingan antara pertambahan panjang kawat dalam x meter dengan panjang awal kawat dalam x meter. Regangan ini bisa terjadi dikarenakan gaya yang diberikan pada benda ataupun kawat tersebut dihilangkan, sehingga kawat kembali ke bentuk awal.</string>
    <string name="pertambahan_m">Pertambahan (m)</string>
    <string name="panjang_m">Panjang (m)</string>
    <string name="modulus_formula">Modulus Formula</string>
    <string name="spring">Spring</string>
    <string name="modulus_description">Dalam fisika, modulus elastisitas disimbolkan dengan E. Modulus elastisitas menggambarkan suatu perbandingan antara tegangan dengan regangan yang dialami bahan. Dengan kata lain, modulus elastis sebanding dengan tegangan dan berbanding terbalik regangan.</string>
    <string name="stress_n_m">Tegangan (N/m)</string>
    <string name="strain">Regangan</string>
    <string name="hooke_n_m">Konstanta Pegas (N/m)</string>
    <string name="susunan_seri">Susunan Seri</string>
    <string name="susunan_paralel">Susunan Paralel</string>
    <string name="series_description">Jika dua buah pegas yang mempunyai tetapan pegas yang sama dirangkaikan secara seri, maka panjang pegas menjadi 2x. Oleh sebab itu, persamaan pegasnya yaitu sebagai berikut :</string>
    <string name="constats_n_m">Konstanta pegas (N/m)</string>
    <string name="parallel_description">Jika pegas disusun secara paralel, panjang pegas akan tetap seperti semula, sedangkan luas penampangnya menjadi lebih 2x dari semula bila pegas disusun 2 buah. Adapun persamaan pegas untuk dua pegas yang disusun secara paralel, yaitu :</string>
</resources>
