<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gavel_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stress"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/stress_formula" />
        <item
            android:id="@+id/nav_strain"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/strain_formula" />
        <item
            android:id="@+id/nav_modulus"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/modulus_formula" />
    </group>

    <item android:title="@string/spring">
        <menu>
            <item
                android:id="@+id/nav_series"
                android:icon="@drawable/ic_dehaze_black_24dp"
                android:title="@string/susunan_seri" />
            <item
                android:id="@+id/nav_parallel"
                android:icon="@drawable/ic_dehaze_black_24dp"
                android:title="@string/susunan_paralel" />
        </menu>
    </item>

</menu>
