<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hookeapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stress"
        android:name="com.example.hookeapplication.ui.stress.StressFragment"
        android:label="@string/stress_formula"
        tools:layout="@layout/fragment_stress" />

    <fragment
        android:id="@+id/nav_strain"
        android:name="com.example.hookeapplication.ui.strain.StrainFragment"
        android:label="@string/strain_formula"
        tools:layout="@layout/fragment_strain" />

    <fragment
        android:id="@+id/nav_modulus"
        android:name="com.example.hookeapplication.ui.modulus.ModulusFragment"
        android:label="@string/modulus_formula"
        tools:layout="@layout/fragment_modulus" />

    <fragment
        android:id="@+id/nav_series"
        android:name="com.example.hookeapplication.ui.share.ShareFragment"
        android:label="@string/susunan_seri"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_parallel"
        android:name="com.example.hookeapplication.ui.send.SendFragment"
        android:label="@string/susunan_paralel"
        tools:layout="@layout/fragment_send" />
</navigation>